--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="./styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anime y manga</title>
 </head>
 <header>
     <div><img src="./Screenshot 2022-08-02_02-12-50-679.png"></div>
